# nonebot-plugin-marshoai

./: .gitignore  .pre-commit-config.yaml  404.html  CNAME  LICENSE-LSO  LICENSE-MIT  LICENSE-MULAN  README.md  README_DEV.md  README_EN.md  README_TOOLS.md  README_TOOLS_EN.md  __init__.py  azure.py  azure1.py  azure2.py  build-docs.sh  config.py  hashmap.json  index.html  main.py  models.py  package.json  pnpm-lock.yaml  pyproject.toml  util.py
.github/workflows/: docs-build.yml  pre-commit.yml  pypi-publish.yml  run-pytest.yml
.pre-commit/: check_filename.py
assets/: app.1yXGHHgl.js  app.B_RH-Usd.js  app.Bc6THEfV.js  app.Bm81FM0X.js  app.Bp4HFj8X.js  app.CbqM-loF.js  app.CvBCi1Bg.js  app.DB2-4pOg.js  app.DEVd50K1.js  app.DpQFNXF8.js  dev_api__types.md.CgOiMYMZ.js  dev_api__types.md.CgOiMYMZ.lean.js  dev_api_azure.md.32NWH0rn.js  dev_api_azure.md.6BSCvlUR.js  dev_api_azure.md.8IWtkttJ.js  dev_api_azure.md.AUhagskP.lean.js  dev_api_azure.md.B4zQ1iWT.lean.js  dev_api_azure.md.B8-f9FUH.js  dev_api_azure.md.B8-f9FUH.lean.js  dev_api_azure.md.BDb7B70X.lean.js  dev_api_azure.md.BWxHkwhT.js  dev_api_azure.md.BWxHkwhT.lean.js  dev_api_azure.md.BmHeML65.js  dev_api_azure.md.BugzIiQa.lean.js  dev_api_azure.md.By3DQZ1H.js  dev_api_azure.md.By3DQZ1H.lean.js  dev_api_azure.md.C7gHxgry.js  dev_api_azure.md.CDAvw7Kt.js  dev_api_azure.md.CjVK28Yf.lean.js  dev_api_azure.md.ClpR59FE.js  dev_api_azure.md.CymJSSaO.lean.js  dev_api_azure.md.D4LEVptk.lean.js  dev_api_azure.md.DC-jSUal.js  dev_api_azure.md.DPJgwg8P.js  dev_api_azure.md.DPJgwg8P.lean.js  dev_api_azure.md.DQObnHcB.lean.js  dev_api_azure.md.DSxYEtLR.js  dev_api_azure.md.D_m9GDrV.lean.js  dev_api_azure.md.DpecGGrX.js  dev_api_azure.md.J4B54ThT.js  (+2020 more)
assets/chunks/: theme.0_0tl2Go.js  theme.B1VGcao-.js  theme.B9KFZePC.js  theme.C6meSkt5.js  theme.DXVg5MkI.js  theme.Drrxv7eQ.js  theme.NEjmdO-F.js  theme.RcKEpCgK.js  theme.qzcW_C4X.js  theme.x4Wwhjm3.js
dev/: extension.html  index.html  project.html
dev/api/: _types.html  azure.html  azure_onebot.html  config.html  constants.html  deal_latex.html  decos.html  dev.html  handler.html  hooks.html  hunyuan.html  index.html  instances.html  marsho.html  marsho_onebot.html  metadata.html  models.html  observer.html  util.html  util_hunyuan.html
dev/api/cache/: decos.html
dev/api/plugin/: index.html  load.html  models.html  register.html  typing.html  utils.html
dev/api/plugins/: random_number_generator.html  weather_demo.html
dev/api/plugins_test/: random_number_generator.html  weather_demo.html
docs/.vitepress/config/: common.ts  en.ts  index.ts  ja.ts  zh.ts
docs/.vitepress/theme/: LICENSE  Layout.vue  index.ts  style.css
docs/components/: ContributorsBar.vue
docs/en/: index.md
docs/en/start/: install.md
docs/ja/: index.md
docs/zh/: index.md
docs/zh/dev/: extension.md  project.md
docs/zh/start/: install-new.md  install-old.md  install.md  use.md
en/: index.html
en/dev/: index.html
en/dev/api/: _types.html  azure.html  azure_onebot.html  config.html  constants.html  deal_latex.html  decos.html  dev.html  handler.html  (+11 more)
en/start/: index.html  install.html
ja/: index.html
nonebot_plugin_marshoai/: __init__.py  _types.py  azure.py  azure_onebot.py  config.py  config_example.yaml  constants.py  deal_latex.py  decos.py  dev.py  handler.py  hooks.py  hunyuan.py  instances.py  marsho.py  marsho_onebot.py  metadata.py  models.py  observer.py  util.py  util_hunyuan.py
nonebot_plugin_marshoai/cache/: decos.py
nonebot_plugin_marshoai/plugin/: __init__.py  load.py  models.py  register.py  typing.py  utils.py
nonebot_plugin_marshoai/plugins/: random_number_generator.py
nonebot_plugin_marshoai/plugins_test/: weather_demo.py
nonebot_plugin_marshoai/tool/: load.py  models.py  utils.py
nonebot_plugin_marshoai/utils/: processor.py  request.py
resources/: README.md
start/: index.html  install-new.html  install-old.html  install.html  use.html
tests/: test_example.py  test_none.py  test_plugin.py
(+253 files in other folders)
