[project]
name = "nonebot-plugin-marshoai"
version = "0.3.2"
description = "Nonebot2插件，调用Azure OpenAI服务实现猫娘聊天"
readme = "README.md"
requires-python = "<4.0,>=3.9"
authors = [{ name = "Asankilp", email = "asankilp@outlook.com" }]
dependencies = [
    "nonebot2>=2.2.0",
    "nonebot-plugin-alconna>=0.48.0",
    "nonebot-plugin-localstore>=0.7.1",
    "azure-ai-inference>=1.0.0b4",
    "zhDatetime>=1.1.1",
    "aiohttp>=3.9",
    "httpx>=0.27.0"
]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/LiteyukiStudio/nonebot-plugin-marshoai"


[tool.nonebot]
plugins = ["nonebot_plugin_marshoai"]
adapters = [{name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11"}]


[tool.pdm]
distribution = true

[tool.pdm.version]
source = "file"
path = "nonebot_plugin_marshoai/__init__.py"

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
