[project]
name = "nonebot-plugin-marshoai"
dynamic = ["version"]
description = "Nonebot2插件，调用Azure OpenAI服务实现猫娘聊天"
readme = "README.md"
requires-python = "<4.0,>=3.9"
authors = [{ name = "Asankilp", email = "asankilp@outlook.com" }]
dependencies = [
    "nonebot2>=2.2.0",
    "nonebot-plugin-alconna>=0.48.0",
    "nonebot-plugin-localstore>=0.7.1",
    "azure-ai-inference>=1.0.0b4",
    "zhDatetime>=1.1.1",
    "aiohttp>=3.9",
    "httpx>=0.27.0",
]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/LiteyukiStudio/nonebot-plugin-marshoai"


[tool.nonebot]
plugins = ["nonebot_plugin_marshoai"]
# 测试用
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
]

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"
tag_filter = "v*"
tag_regex = '^v(?:\D*)?(?P<version>([1-9][0-9]*!)?(0|[1-9][0-9]*)(\.(0|[1-9][0-9]*))*((a|b|c|rc)(0|[1-9][0-9]*))?(\.post(0|[1-9][0-9]*))?(\.dev(0|[1-9][0-9]*))?$)$'

[tool.pdm.build]
includes = []

[tool.pdm.dev-dependencies]
dev = ["nb-cli>=1.4.2"]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
